--- a/static/package.json
+++ b/static/package.json
@@ -5,6 +5,7 @@
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.9",
+    "file-loader": "^1.1.6",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
