--- a/static/package.json
+++ b/static/package.json
@@ -8,13 +8,15 @@
     "file-loader": "^1.1.6",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
-    "react-draggable": "^3.0.5",
     "react-redux": "^5.0.6",
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
     "style-loader": "^0.20.1",
-    "url-loader": "^0.6.2"
+    "url-loader": "^0.6.2",
+    "webpack-dashboard": "^1.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
