--- a/static/package.json
+++ b/static/package.json
@@ -30,7 +30,7 @@
     "start": "webpack-dev-server --history-api-fallback --inline --progress",
     "build": "webpack -p --progress --config webpack.config.js",
     "dev-build": "webpack --progress -d --config webpack.config.js",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack-dashboard -- webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --progress -d --config webpack.config.js --watch"
   },
